Split out subscription controller